gen/LanguageTestParser.py
# Generated from /home/milosz/SemestrIV/TKiK/RASH-Compiler/grammar/LanguageTestParser.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LanguageTestParser ( Parser ):

    grammarFileName = "LanguageTestParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'for'", "'while'", "'in'", "'break'", 
                     "'continue'", "'if'", "'else'", "'private'", "'protected'", 
                     "'public'", "'static'", "'class'", "'func'", "'return'", 
                     "'and'", "'or'", "'not'", "'is'", "'True'", "'False'", 
                     "'import'", "'from'", "'as'", "'new'", "'int'", "'float'", 
                     "'char'", "'str'", "'void'", "'bool'", "'var'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "','", "'.'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "':'", "'->'", "'='", "'*='", 
                     "'/='", "'%='", "'+='", "'-='", "'**='", "';'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", "'&'", "'^'", 
                     "'|'", "'?'" ]

    symbolicNames = [ "<INVALID>", "KW_FOR", "KW_WHILE", "KW_IN", "KW_BREAK", 
                      "KW_CONTINUE", "KW_IF", "KW_ELSE", "KW_PRIVATE", "KW_PROTECTED", 
                      "KW_PUBLIC", "KW_STATIC", "KW_CLASS", "KW_FUNCTION", 
                      "KW_RETURN", "KW_AND", "KW_OR", "KW_NOT", "KW_IS", 
                      "KW_TRUE", "KW_FALSE", "KW_IMPORT", "KW_FROM", "KW_AS", 
                      "KW_NEW", "T_INT", "T_FLOAT", "T_CHAR", "T_STRING", 
                      "T_VOID", "T_BOOL", "DECL_VAR", "WHITESPACE", "NEWLINE", 
                      "STRING_LITERAL", "BOOL_LITERAL", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "DEC_LITERAL", "HEX_LITERAL", "OCT_LITERAL", 
                      "BIN_LITERAL", "IDENTIFIER", "COMMA", "DOT", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
                      "COLON", "ARROW", "ASSIGN", "STAR_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "POW_ASSIGN", 
                      "SEMI", "EQ", "NE", "LT", "GT", "LE", "GE", "LSHIFT", 
                      "RSHIFT", "PLUS", "MINUS", "STAR", "DIV", "MOD", "POW", 
                      "AND", "CARET", "OR", "QUESTION", "SINGLE_LINE_COMMENT", 
                      "MULTI_LINE_COMMENT" ]

    RULE_parse = 0
    RULE_importStatement = 1
    RULE_statement = 2
    RULE_arrayDeclaration = 3
    RULE_objectDeclaration = 4
    RULE_functionCallParams = 5
    RULE_primaryExpression = 6
    RULE_postfixExpression = 7
    RULE_unaryExpression = 8
    RULE_multiplicativeExpression = 9
    RULE_additiveExpression = 10
    RULE_relationalExpression = 11
    RULE_equalityExpression = 12
    RULE_logicalAndExpression = 13
    RULE_logicalOrExpression = 14
    RULE_conditionalExpression = 15
    RULE_assignmentExpression = 16
    RULE_expression = 17
    RULE_initializerClause = 18
    RULE_bracedInitList = 19
    RULE_initializerList = 20
    RULE_functionDefinition = 21
    RULE_functionParams = 22
    RULE_paramDeclarationList = 23
    RULE_paramDeclaration = 24
    RULE_functionReturnType = 25
    RULE_functionCall = 26
    RULE_classDefinition = 27
    RULE_classInheritance = 28
    RULE_classBody = 29
    RULE_classAttributeDeclaration = 30
    RULE_classMethodDefinition = 31
    RULE_loopStatement = 32
    RULE_conditionalStatement = 33
    RULE_codeBlock = 34
    RULE_literal = 35
    RULE_jumpStatement = 36
    RULE_variableDeclStatement = 37
    RULE_variableAssignment = 38
    RULE_assignmentOperator = 39
    RULE_typeSpecifier = 40
    RULE_simpleTypeSpecifier = 41
    RULE_identifier = 42
    RULE_nameIdentifier = 43
    RULE_arrayBrackets = 44
    RULE_scope = 45
    RULE_unaryOperator = 46

    ruleNames =  [ "parse", "importStatement", "statement", "arrayDeclaration", 
                   "objectDeclaration", "functionCallParams", "primaryExpression", 
                   "postfixExpression", "unaryExpression", "multiplicativeExpression", 
                   "additiveExpression", "relationalExpression", "equalityExpression", 
                   "logicalAndExpression", "logicalOrExpression", "conditionalExpression", 
                   "assignmentExpression", "expression", "initializerClause", 
                   "bracedInitList", "initializerList", "functionDefinition", 
                   "functionParams", "paramDeclarationList", "paramDeclaration", 
                   "functionReturnType", "functionCall", "classDefinition", 
                   "classInheritance", "classBody", "classAttributeDeclaration", 
                   "classMethodDefinition", "loopStatement", "conditionalStatement", 
                   "codeBlock", "literal", "jumpStatement", "variableDeclStatement", 
                   "variableAssignment", "assignmentOperator", "typeSpecifier", 
                   "simpleTypeSpecifier", "identifier", "nameIdentifier", 
                   "arrayBrackets", "scope", "unaryOperator" ]

    EOF = Token.EOF
    KW_FOR=1
    KW_WHILE=2
    KW_IN=3
    KW_BREAK=4
    KW_CONTINUE=5
    KW_IF=6
    KW_ELSE=7
    KW_PRIVATE=8
    KW_PROTECTED=9
    KW_PUBLIC=10
    KW_STATIC=11
    KW_CLASS=12
    KW_FUNCTION=13
    KW_RETURN=14
    KW_AND=15
    KW_OR=16
    KW_NOT=17
    KW_IS=18
    KW_TRUE=19
    KW_FALSE=20
    KW_IMPORT=21
    KW_FROM=22
    KW_AS=23
    KW_NEW=24
    T_INT=25
    T_FLOAT=26
    T_CHAR=27
    T_STRING=28
    T_VOID=29
    T_BOOL=30
    DECL_VAR=31
    WHITESPACE=32
    NEWLINE=33
    STRING_LITERAL=34
    BOOL_LITERAL=35
    INTEGER_LITERAL=36
    FLOAT_LITERAL=37
    DEC_LITERAL=38
    HEX_LITERAL=39
    OCT_LITERAL=40
    BIN_LITERAL=41
    IDENTIFIER=42
    COMMA=43
    DOT=44
    LPAREN=45
    RPAREN=46
    LBRACE=47
    RBRACE=48
    LBRACKET=49
    RBRACKET=50
    COLON=51
    ARROW=52
    ASSIGN=53
    STAR_ASSIGN=54
    DIV_ASSIGN=55
    MOD_ASSIGN=56
    PLUS_ASSIGN=57
    MINUS_ASSIGN=58
    POW_ASSIGN=59
    SEMI=60
    EQ=61
    NE=62
    LT=63
    GT=64
    LE=65
    GE=66
    LSHIFT=67
    RSHIFT=68
    PLUS=69
    MINUS=70
    STAR=71
    DIV=72
    MOD=73
    POW=74
    AND=75
    CARET=76
    OR=77
    QUESTION=78
    SINGLE_LINE_COMMENT=79
    MULTI_LINE_COMMENT=80

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LanguageTestParser.EOF, 0)

        def importStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageTestParser.ImportStatementContext)
            else:
                return self.getTypedRuleContext(LanguageTestParser.ImportStatementContext,i)


        def classDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageTestParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(LanguageTestParser.ClassDefinitionContext,i)


        def getRuleIndex(self):
            return LanguageTestParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = LanguageTestParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 94
                self.importStatement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 100
                self.classDefinition()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(LanguageTestParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IMPORT(self):
            return self.getToken(LanguageTestParser.KW_IMPORT, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageTestParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(LanguageTestParser.IdentifierContext,i)


        def SEMI(self):
            return self.getToken(LanguageTestParser.SEMI, 0)

        def KW_FROM(self):
            return self.getToken(LanguageTestParser.KW_FROM, 0)

        def getRuleIndex(self):
            return LanguageTestParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = LanguageTestParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 108
                self.match(LanguageTestParser.KW_FROM)
                self.state = 109
                self.identifier()


            self.state = 112
            self.match(LanguageTestParser.KW_IMPORT)
            self.state = 113
            self.identifier()
            self.state = 114
            self.match(LanguageTestParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(LanguageTestParser.FunctionDefinitionContext,0)


        def codeBlock(self):
            return self.getTypedRuleContext(LanguageTestParser.CodeBlockContext,0)


        def conditionalStatement(self):
            return self.getTypedRuleContext(LanguageTestParser.ConditionalStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(LanguageTestParser.LoopStatementContext,0)


        def jumpStatement(self):
            return self.getTypedRuleContext(LanguageTestParser.JumpStatementContext,0)


        def SEMI(self):
            return self.getToken(LanguageTestParser.SEMI, 0)

        def variableDeclStatement(self):
            return self.getTypedRuleContext(LanguageTestParser.VariableDeclStatementContext,0)


        def variableAssignment(self):
            return self.getTypedRuleContext(LanguageTestParser.VariableAssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(LanguageTestParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LanguageTestParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LanguageTestParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.functionDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.codeBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 118
                self.conditionalStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 119
                self.loopStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 120
                self.jumpStatement()
                self.state = 121
                self.match(LanguageTestParser.SEMI)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.variableDeclStatement()
                self.state = 124
                self.match(LanguageTestParser.SEMI)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 126
                self.variableAssignment()
                self.state = 127
                self.match(LanguageTestParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 129
                self.expression()
                self.state = 130
                self.match(LanguageTestParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_NEW(self):
            return self.getToken(LanguageTestParser.KW_NEW, 0)

        def nameIdentifier(self):
            return self.getTypedRuleContext(LanguageTestParser.NameIdentifierContext,0)


        def simpleTypeSpecifier(self):
            return self.getTypedRuleContext(LanguageTestParser.SimpleTypeSpecifierContext,0)


        def LBRACKET(self):
            return self.getToken(LanguageTestParser.LBRACKET, 0)

        def literal(self):
            return self.getTypedRuleContext(LanguageTestParser.LiteralContext,0)


        def RBRACKET(self):
            return self.getToken(LanguageTestParser.RBRACKET, 0)

        def bracedInitList(self):
            return self.getTypedRuleContext(LanguageTestParser.BracedInitListContext,0)


        def getRuleIndex(self):
            return LanguageTestParser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDeclaration" ):
                return visitor.visitArrayDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def arrayDeclaration(self):

        localctx = LanguageTestParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arrayDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(LanguageTestParser.KW_NEW)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.state = 135
                self.nameIdentifier()
                pass
            elif token in [25, 26, 27, 28, 29, 30]:
                self.state = 136
                self.simpleTypeSpecifier()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 139
                self.match(LanguageTestParser.LBRACKET)
                self.state = 140
                self.literal()
                self.state = 141
                self.match(LanguageTestParser.RBRACKET)
                self.state = 142
                self.bracedInitList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_NEW(self):
            return self.getToken(LanguageTestParser.KW_NEW, 0)

        def functionCallParams(self):
            return self.getTypedRuleContext(LanguageTestParser.FunctionCallParamsContext,0)


        def nameIdentifier(self):
            return self.getTypedRuleContext(LanguageTestParser.NameIdentifierContext,0)


        def simpleTypeSpecifier(self):
            return self.getTypedRuleContext(LanguageTestParser.SimpleTypeSpecifierContext,0)


        def getRuleIndex(self):
            return LanguageTestParser.RULE_objectDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectDeclaration" ):
                listener.enterObjectDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectDeclaration" ):
                listener.exitObjectDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectDeclaration" ):
                return visitor.visitObjectDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def objectDeclaration(self):

        localctx = LanguageTestParser.ObjectDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_objectDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(LanguageTestParser.KW_NEW)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.state = 147
                self.nameIdentifier()
                pass
            elif token in [25, 26, 27, 28, 29, 30]:
                self.state = 148
                self.simpleTypeSpecifier()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self.functionCallParams()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(LanguageTestParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageTestParser.RPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageTestParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageTestParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageTestParser.COMMA)
            else:
                return self.getToken(LanguageTestParser.COMMA, i)

        def getRuleIndex(self):
            return LanguageTestParser.RULE_functionCallParams

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallParams" ):
                listener.enterFunctionCallParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallParams" ):
                listener.exitFunctionCallParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallParams" ):
                return visitor.visitFunctionCallParams(self)
            else:
                return visitor.visitChildren(self)




    def functionCallParams(self):

        localctx = LanguageTestParser.FunctionCallParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionCallParams)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(LanguageTestParser.LPAREN)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 39840133545984) != 0):
                self.state = 154
                self.expression()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==43:
                    self.state = 155
                    self.match(LanguageTestParser.COMMA)
                    self.state = 156
                    self.expression()
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 164
            self.match(LanguageTestParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageTestParser.LiteralContext)
            else:
                return self.getTypedRuleContext(LanguageTestParser.LiteralContext,i)


        def functionCall(self):
            return self.getTypedRuleContext(LanguageTestParser.FunctionCallContext,0)


        def LPAREN(self):
            return self.getToken(LanguageTestParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LanguageTestParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(LanguageTestParser.RPAREN, 0)

        def arrayDeclaration(self):
            return self.getTypedRuleContext(LanguageTestParser.ArrayDeclarationContext,0)


        def objectDeclaration(self):
            return self.getTypedRuleContext(LanguageTestParser.ObjectDeclarationContext,0)


        def identifier(self):
            return self.getTypedRuleContext(LanguageTestParser.IdentifierContext,0)


        def getRuleIndex(self):
            return LanguageTestParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = LanguageTestParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primaryExpression)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 166
                        self.literal()

                    else:
                        raise NoViableAltException(self)
                    self.state = 169 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.functionCall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.match(LanguageTestParser.LPAREN)
                self.state = 173
                self.expression()
                self.state = 174
                self.match(LanguageTestParser.RPAREN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 176
                self.arrayDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 177
                self.objectDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 178
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(LanguageTestParser.PrimaryExpressionContext,0)


        def postfixExpression(self):
            return self.getTypedRuleContext(LanguageTestParser.PostfixExpressionContext,0)


        def LBRACKET(self):
            return self.getToken(LanguageTestParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(LanguageTestParser.RBRACKET, 0)

        def expression(self):
            return self.getTypedRuleContext(LanguageTestParser.ExpressionContext,0)


        def bracedInitList(self):
            return self.getTypedRuleContext(LanguageTestParser.BracedInitListContext,0)


        def getRuleIndex(self):
            return LanguageTestParser.RULE_postfixExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixExpression" ):
                listener.enterPostfixExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixExpression" ):
                listener.exitPostfixExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpression" ):
                return visitor.visitPostfixExpression(self)
            else:
                return visitor.visitChildren(self)


